deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ttr-one
  labels:
    app.kubernetes.io/part-of: ttr-one
